--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                     </div>
                     <p class="xs text-slate-500 -mt-6 text-right">資料來源: Yahoo Finance</p>
                     <div class="overflow-x-auto mt-8">
-                        <h3 class="table-title font-semibold text-slate-700 mb-4 text-center">台股三大法人買賣超 (單位：新台幣億元)</h3>
+                        <h3 class="table-title font-semibold text-slate-700 mb-4 text-center">台股三大法人買賣超(不含盤後大額交易資料)(單位：新台幣億元)</h3>
                         <table class="w-full text-center">
                             <thead>
                                 <tr class="border-b border-slate-300">
