--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
                 <div class="mt-4 border-t border-slate-200 pt-4 space-y-10">
                     <!-- SOFI -->
                     <div>
-                        <h3 class="table-title font-bold text-slate-800 mb-4">SoFi Technologies (SOFI) - <span class="text-green-600">展望正向 (Buy)</span></h3>
+                        <h3 class="table-title font-bold text-slate-800 mb-4">SoFi Technologies (SOFI) - <span class="text-green-600">展望正向</span></h3>
                         <div class="overflow-x-auto">
                             <table class="w-full">
                                 <tbody>
@@ -842,7 +842,7 @@
                     </div>
                     <!-- INTU -->
                     <div>
-                        <h3 class="table-title font-bold text-slate-800 mb-4">Intuit (INTU) - <span class="text-slate-500">展望中性 (Neutral)</span></h3>
+                        <h3 class="table-title font-bold text-slate-800 mb-4">Intuit (INTU) - <span class="text-slate-500">展望中性</span></h3>
                         <div class="overflow-x-auto">
                             <table class="w-full">
                                 <tbody>
@@ -855,7 +855,7 @@
                     </div>
                     <!-- Morgan Stanley -->
                     <div>
-                        <h3 class="table-title font-bold text-slate-800 mb-4">Morgan Stanley (MS) - <span class="text-green-600">展望正向 (Buy)</span></h3>
+                        <h3 class="table-title font-bold text-slate-800 mb-4">Morgan Stanley (MS) - <span class="text-green-600">展望正向</span></h3>
                         <div class="overflow-x-auto">
                             <table class="w-full">
                                 <tbody>
@@ -868,7 +868,7 @@
                     </div>
                      <!-- Intel -->
                      <div>
-                        <h3 class="table-title font-bold text-slate-800 mb-4">Intel (INTC) - <span class="text-green-600">展望正向 (Buy)</span></h3>
+                        <h3 class="table-title font-bold text-slate-800 mb-4">Intel (INTC) - <span class="text-green-600">展望正向</span></h3>
                         <div class="overflow-x-auto">
                             <table class="w-full">
                                 <tbody>
