--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
     </style>
 </head>
 <body class="text-slate-800">
+    <button id="downloadBtn" class="bg-indigo-600 text-white font-bold py-3 px-5 rounded-full shadow-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition-all duration-300 ease-in-out flex items-center">
+        <i class="fa-solid fa-download mr-2"></i><span>下載週報</span>
+    </button>
     <div class="container mx-auto max-w-6xl p-4 md:p-8">
         <header class="text-center mb-12">
             <h1 class="main-title font-bold gradient-text">金融市場週報</h1>
